fix spacing issue in position table header

--- a/packages/frontend/app/components/Trade/PositionsTable/PositionsTable.module.css
+++ b/packages/frontend/app/components/Trade/PositionsTable/PositionsTable.module.css
@@ -21,10 +21,9 @@
     display: grid;
     grid-template-columns: 0.8fr 0.8fr 0.8fr 0.8fr 0.8fr 1fr 0.8fr 0.8fr 0.8fr 0.8fr 1.2fr;
     align-items: center;
-
     position: sticky;
     top: 0;
-
+    padding-right: 8px;
     z-index: 10;
 }
 
